--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,9 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: 'Reproducible Research: Peer Assessment 1'
+author: "Gaurav"
+date: "February 7, 2016"
+output: html_document
 ---
-
 
 ## Loading and preprocessing the data
 
